Fri Aug 12 12:30:19 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * modules/FeatureParser.pm:
        * modules/ProjectCreator.pm:

          Added a new type of feature file that is specific to the project
          type.  If a file of the form <type>.features is located in the
          config directory, it is read after global.features but before the
          file specified by -feature_file (if any).  See the README for more
          details.

Fri Aug 12 11:44:23 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:
        * templates/makedll.mpt:

          Reworked the way that 64 and 32 bit builds are specified.  64 bit
          is still the default, however to build 32 bit requires that the
          user set the template variable build64bit to empty.

Thu Aug 11 13:30:07 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where a directory used as input for a custom file type
          would not result in any input files when automatic is set to zero.

Thu Aug 11 06:42:33 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Updated the Defaulting Behavior section.

        * USAGE:
        * modules/Options.pm:

          Fixed poorly worded portions of the usage.

        * clone_build_tree.pl:

          Added an option to link build related files (Makefile, .dsw,
          .etc).

        * combine_dsw.pl:

          Fixed a spelling error.

        * modules/AutomakeWorkspaceCreator.pm:

          Added calls for modifying the library path with the
          WorkspaceHelper.

        * modules/Creator.pm:

          Fixed a bug where using * in the 'after' setting wouldn't always
          be expanded.

        * modules/Driver.pm:

          The minimum version of perl needs to be 5.6 since
          File::Spec::canonpath is used in Options.pm.

        * modules/ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:
