@@ -138,6 +138,14 @@ NCC {
   platforms = tandem
 }
 
+ghsppc {
+  cxx           = cxppc
+  ar            = cxppc
+  arflags       = -archive -o
+  compilerflags = --one_instantiation_per_object --exceptions
+  platforms     = integrity
+}
+
 // ***********************************************************************
 // Platform Section
 // ***********************************************************************
@@ -234,6 +242,22 @@ tandem {
   shflags       = -shared -all
   ldlibs        = -lsocket -ldl -lnsl -lgen -lthread
   extracppflags = -D_REENTRANT
+}
+
+// For Integrity, the following should be set as environment variables, on
+// the make command line or within a verbatim section in your mpc file.
+//
+// GHSROOT     The full path to your Green Hills installation.
+// RTOSROOT    The full path to your BSP installation (probably $GHSROOT).
+// BSP         The BSP name (ex. sim800).
+// TARGET_BSP  The full path to your target BSP.
+// TARGET_LD   The full path to your target ld file.
+//
+integrity {
+  dll_ext       =
+  ldlibs        = -lshm_client -lnet -livfssca -lposixsca
+  extraarflags  = -bspname=$(RTOSROOT)/target/$(BSP).bld
+  extracppflags = -integrate -dynamic -bspname=$(RTOSROOT)/target/$(BSP).bld -os_dir $(GHSROOT) -non_shared -Uvector -bspfile=$(TARGET_BSP) $(TARGET_LD)
 }
 
 conditional_include "user_makedll"
