@@ -1,3 +1,15 @@
+Mon Aug 22 07:11:37 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * prj_install.pl:
+
+          Added options to override the installation location for a
+          particular tag.
+
+        * templates/make.mpd:
+        * templates/makedll.mpt:
+
+          Added support for the GHS Integrity OS.
+
 Fri Aug 12 12:30:19 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * README:
